# core-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: android.yml  ci.yml  cli-release.yml  ios.yml  release.yml  security.yml  tauri-plugin.yml
api-snapshots/: api-compat-v1.json
apps/smoke-tests/: Cargo.toml
apps/smoke-tests/src/: main.rs
apps/smoke-tests/tests/: conformance.rs
apps/unbg-cli/: Cargo.toml
apps/unbg-cli/src/: main.rs
crates/unbg-bench/: Cargo.toml
crates/unbg-bench/src/: lib.rs
crates/unbg-core/: Cargo.toml
crates/unbg-core/src/: lib.rs
crates/unbg-image/: Cargo.toml
crates/unbg-image/src/: lib.rs
crates/unbg-installer/: Cargo.toml
crates/unbg-installer/src/: lib.rs
crates/unbg-model-registry/: Cargo.toml
crates/unbg-model-registry/src/: lib.rs
crates/unbg-runtime-ort/: Cargo.toml
crates/unbg-runtime-ort/src/: lib.rs
crates/unbg-telemetry/: Cargo.toml
crates/unbg-telemetry/src/: lib.rs
crates/unbg-uniffi/: Cargo.toml  build.rs
crates/unbg-uniffi/src/: lib.rs  unbg.udl
docs/: ANDROID_CONSUMER.md  API_COMPATIBILITY.md  IOS_CONSUMER.md  SECURITY_RELEASE.md  TAURI_CONSUMER.md  TROUBLESHOOTING.md
integrations/android-unbg/: AndroidManifest.xml  Cargo.toml  README.md  build.gradle.kts  consumer-rules.pro
integrations/android-unbg/src/: lib.rs
integrations/android-unbg/src/main/kotlin/com/unbg/sdk/: UnbgClient.kt
integrations/ios-unbg/: Cargo.toml  Package.swift  README.md  UNBG.podspec
integrations/ios-unbg/Sources/UNBG/: UNBGClient.swift
integrations/ios-unbg/src/: lib.rs
integrations/tauri-plugin-unbg/: Cargo.toml  README.md  package.json
integrations/tauri-plugin-unbg/src/: index.ts  lib.rs
scripts/: build-android.sh  build-ios.sh  check-api-compat.py  prepare-model-bundle.sh  release-manifest.sh  sign-artifacts.sh
