[package]
name = "unbg-installer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
walkdir.workspace = true
unbg-core = { path = "../unbg-core" }
unbg-model-registry = { path = "../unbg-model-registry" }
