[package]
name = "unbg-runtime-ort"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["directml", "cuda", "coreml"]
directml = ["ort/directml"]
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]

[dependencies]
anyhow.workspace = true
image.workspace = true
ndarray.workspace = true
ort = { version = "2.0.0-rc.10", features = ["ndarray", "download-binaries", "load-dynamic", "copy-dylibs"] }
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
unbg-model-registry = { path = "../unbg-model-registry" }
unbg-core = { path = "../unbg-core" }
