[package]
name = "unbg-uniffi"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uniffi.workspace = true
unbg-core = { path = "../unbg-core" }
unbg-image = { path = "../unbg-image" }
unbg-model-registry = { path = "../unbg-model-registry" }
unbg-telemetry = { path = "../unbg-telemetry" }
unbg-runtime-ort = { path = "../unbg-runtime-ort" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[package.metadata.unbg]
uniffi_bindgen_version = "0.30.0"
