[package]
name = "tauri-plugin-unbg"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
tauri-plugin = ["dep:tauri"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", optional = true, default-features = false }
unbg-core = { path = "../../crates/unbg-core" }
unbg-image = { version = "0.1.0", path = "../../crates/unbg-image" }
unbg-telemetry = { path = "../../crates/unbg-telemetry" }
unbg-runtime-ort = { path = "../../crates/unbg-runtime-ort" }

[dev-dependencies]
image.workspace = true
